fixed the calendar anchors wrapping bug on safari

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -228,6 +228,7 @@
       &__anchors {
         font-size: 20px;
         font-family: "The Wild Breath of Zelda";
+        display: flex;
         &__anchor {
           padding-left: 34px;
           margin-right: 24px;
